# Scaled-YOLOv4-TensorRT8

./: .gitignore  Makefile  README.md  build.sh  final_model.dvc  pyproject.toml
.dvc/: config
yolov4-p6-tensorrt/: CMakeLists.txt  gen_wts.py  mish.cu  mish.h  yololayer.cu  yololayer.h
